<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ProgettoCorso</string>

    <string name="example_relativelayout">Example RelativeLayout</string>
    <string name="button">Button</string>
    <string name="message_toast">Message by toast</string>
    <string name="settings">Settings</string>
    <string name="click_settings">click on settings</string>

    <string name="pref_sync_frequency">Sync frequency</string>
    <string-array name="syncFrequency">
        <item>Once a day</item>
        <item>Once a week</item>
        <item>Once a year</item>
        <item>Never</item>
    </string-array>

    <string name="pref_notific">Show Notify</string>
    <string name="pref_user_name">User name</string>

    <string name="off">Off</string>
    <string name="on">On</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="value_required">Value required</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="accept_the_terms_of_service">Accept the terms of service</string>
    <string name="start_new_activity">Start new activity</string>

    <string-array name="items_name">
        <item>MacBook Pro</item>
        <item>Alienware</item>
        <item>Sony play station 4</item>
        <item>Xbox One</item>
        <item>Google glass</item>
        <item>Google Nexus 6</item>
    </string-array>

    <string-array name="item_description">
        <item>MacBook pro with new graphics and faster flash storage.</item>
        <item>High performance computer gaming system.</item>
        <item>PS4 console, the most immersive gaming experience ever.</item>
        <item>Best games, multi-player and entertainment.</item>
        <item>Optical head mounted display</item>
        <item>Motorolla Nexus x</item>
    </string-array>

</resources>
